src/objects/My_Biz_Office_User__c.object
<CustomObject>
    <description>This object is used to display all MBO employees</description>
    <fields>
        <fullName>Email__c</fullName>
        <externalId>true</externalId>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MBORecordID__c</fullName>
        <externalId>true</externalId>
        <label>MBO Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Salesforce user that is the same person as the MBO user</description>
        <inlineHelpText>Reference the Salesforce user that is the same as this MBO user</inlineHelpText>
        <label>Salesforce User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MBO_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TimeTrade_Link__c</fullName>
        <label>TimeTrade Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <description>Updated by Business Center; pushed to Access</description>
        <inlineHelpText>The user name for the Business Center and Access</inlineHelpText>
        <label>User Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fs_aDGUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Active Directory GUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fs_phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>fs_title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>MBO User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Salesforce_User__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MBO Users</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>syncUpdate_email</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(Email__c)
)</errorConditionFormula>
        <errorDisplayField>Email__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_firstName</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(First_Name__c)
)</errorConditionFormula>
        <errorDisplayField>First_Name__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_lastName</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(Last_Name__c)
)</errorConditionFormula>
        <errorDisplayField>Last_Name__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_mboRecordId</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(MBORecordID__c)
)</errorConditionFormula>
        <errorDisplayField>MBORecordID__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_owner</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(OwnerId)
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_phone</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(fs_phone__c)
)</errorConditionFormula>
        <errorDisplayField>fs_phone__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_salesforceUser</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(Salesforce_User__c)
)</errorConditionFormula>
        <errorDisplayField>Salesforce_User__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_timeTradeLink</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(TimeTrade_Link__c)
)</errorConditionFormula>
        <errorDisplayField>TimeTrade_Link__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>syncUpdate_userName</fullName>
        <active>true</active>
        <description>Restricts updates to any fields that are updated by the MBO System sync.</description>
        <errorConditionFormula>AND(
          NOT($User.Id = &apos;00580000003Xfjx&apos;),
          ISCHANGED(UserName__c)
)</errorConditionFormula>
        <errorDisplayField>UserName__c</errorDisplayField>
        <errorMessage>This field is managed in the MBO System.</errorMessage>
    </validationRules>
</CustomObject>